Fix alignment of section headings

--- a/style.css
+++ b/style.css
@@ -60,9 +60,7 @@ h1, h2, h3, h4 {
   margin-bottom: 3rem;
   text-align: center;
   position: relative;
-  display: inline-block;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
 }
 
 .section-title::after {
